workspace/log/build_2023-12-03_22-04-52/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::action_do_circle()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:224:23: error: ‘yaw_err’ was not declared in this scope
  224 |                 while(yaw_err > precision){
      |                       ^~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:224:33: error: ‘precision’ was not declared in this scope; did you mean ‘hard_precision’?
  224 |                 while(yaw_err > precision){
      |                                 ^~~~~~~~~
      |                                 hard_precision
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
